welcome.lessons.welcome.loopwhile.LoopWhile.scala.error
Program:7: error: illegal start of simple expression
	}
        ^